--- a/src/Components/Styles/SideBar.css
+++ b/src/Components/Styles/SideBar.css
@@ -1,4 +1,4 @@
-/* .active-link{
+.active-link{
     background-color: darkblue;
     color: whitesmoke;
 
@@ -11,7 +11,7 @@
     #main-side{
         height: 100%;
     }
-} */
+}
 
 /* 
 
