--- a/src/Components/Styles/profile.css
+++ b/src/Components/Styles/profile.css
@@ -1,20 +1,33 @@
 .circle-image {
-    width: 100px; 
-    height: 100px;
-    border-radius: 50%; 
-    object-fit: cover;
-  }
-  
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
 @media (max-width: 768px) {
-    .circle-image {
-      width: 80px; 
-      height: 80px;
-    }
+  .circle-image {
+    width: 80px;
+    height: 80px;
   }
-  
-  @media (max-width: 480px) {
-    .circle-image {
-      width: 60px; 
-      height: 60px;
-    }
+}
+
+@media (max-width: 480px) {
+  .circle-image {
+    width: 60px;
+    height: 60px;
   }
+
+  .pro-main{
+    margin-top: 5em !important;
+  }
+}
+
+.profile-edit-button {
+  background-color: #dd6236;
+
+}
+
+.profile-editables {
+  font-size: 28px;
+}
