--- a/src/Components/Styles/Navbar.css
+++ b/src/Components/Styles/Navbar.css
@@ -1,8 +1,9 @@
 @import url(https://unpkg.com/@webpixels/css@1.0/dist/index.css);
 /* @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Text:wght@600;700;800;900&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Quicksand&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Michroma&display=swap');
 
-
+  @import url('https://fonts.googleapis.com/css2?family=Syne:wght@500&display=swap');
 body {
     width: 100%;
     height: 100%;
@@ -15,14 +16,7 @@ body {
     
 }
 
-video {
-    position: absolute;
-    top: 0;
-    width: 100vw;
-    height: 660px !important;
-    object-fit: cover;
-    z-index: 0;
-}
+
 
 .nav-item {
     color: white !important;
@@ -55,7 +49,7 @@ video {
 .banner-content #f-col p:first-child {
     font-size: xx-large;
     font-weight: 900 !important;
-    background: linear-gradient(to right, #4a7c0cc7, #e7ffbb);
+    background: linear-gradient(to right, #000000c7, #ff0000);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 
@@ -63,7 +57,7 @@ video {
 
 
 .banner-content #f-col p:last-child {
-    background: linear-gradient(to right, #4a7c0cc7, #e7ffbb);
+    background: linear-gradient(to right, #000000c7, #ff0000);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -71,14 +65,14 @@ video {
 .banner-content #s-col p:first-child {
     font-size: xx-large;
     font-weight: 900 !important;
-    background: linear-gradient(to left, #4a7c0cc7, #e7ffbb);
+    background: linear-gradient(to left, #000000c7, #ff0000);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
 
 .banner-content #s-col p:last-child {
-    background: linear-gradient(to left, #4a7c0cc7, #e7ffbb);
+    background: linear-gradient(to left, #000000c7, #ff0000);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -124,11 +118,12 @@ video {
 
 
 .myNav{
-background-color: #c2baa6;
-   
-    
+background-color: #43A49B;
+font-family: 'Syne', sans-serif;    
 }
-
+.fone4u-title{
+    font-family: Michroma;
+}
 
 
 
