--- a/src/Components/Styles/feedback.css
+++ b/src/Components/Styles/feedback.css
@@ -1,3 +1,11 @@
-.feedbackButton{
-    background-color: #dd6236;
-}
+
+
+.feedbackButton {
+    background-color: #26A69A;
+    border-radius: 10%;
+  
+  }
+  .feedbackButton:hover{
+    background-color: #68b6ae;
+  
+  }
