--- a/src/Components/Styles/login.css
+++ b/src/Components/Styles/login.css
@@ -3,3 +3,33 @@
         width: 96.5%;
     }
 }
+
+.login-body {
+    background-color: #f5f5f5 !important;
+    border: solid #de283b .1em !important;
+    margin-top: 5em;
+}
+
+.login-body::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px #f5f5f5;
+    border-radius: 10px;
+    background-color: #F5F5F5;
+}
+
+.login-body::-webkit-scrollbar {
+    width: 5px;
+
+    background-color: #F5F5F5;
+}
+
+.login-body::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px #f5f5f5;
+    background-color: #cac6c6;
+}
+
+#check-btn:checked {
+    color: #de283b !important;
+    background-color: #de283b ;
+    border-color: #de283b;
+}
