--- a/src/Components/Styles/profile.css
+++ b/src/Components/Styles/profile.css
@@ -1,6 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@200&family=Syne:wght@500&display=swap');
+
+.pro-main{
+  /* font-family: 'Catamaran', sans-serif; */
+  /* font-family: 'Syne', sans-serif; */
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 .circle-image {
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 180px;
   border-radius: 50%;
   object-fit: cover;
 }
@@ -32,5 +39,5 @@
 
 }
 .profile-editables {
-  font-size: 28px;
+  font-size: 22px;
 }
